# lstm

./: .gitignore  README.md  build.sh  history.txt  start.sh  stock_prediction.ipynb
mlruns/0/: meta.yaml
mlruns/525920180225957305/: meta.yaml
mlruns/525920180225957305/0362c6674b4b42a79e8b493c34cbdf76/: meta.yaml
mlruns/525920180225957305/078a1eb4714645229ff5494720ad9a31/: meta.yaml
mlruns/525920180225957305/0f69bdfb3a85446c87105c6ad8a3dc2b/: meta.yaml
mlruns/525920180225957305/11a7e66b5c1d4ca48aa85fc1fc7aee06/: meta.yaml
mlruns/525920180225957305/24482741133a4dd6a66989bd6b14e46f/: meta.yaml
mlruns/525920180225957305/3b12b5d84dc048e1b2274e0dd0191c05/: meta.yaml
mlruns/525920180225957305/624ff425317a427ea664d79e8660cdc6/: meta.yaml
mlruns/525920180225957305/66a08aab23dc4b349279fcfde3dc8167/: meta.yaml
mlruns/525920180225957305/6e29b51b4325498283a0bfb44406670a/: meta.yaml
mlruns/525920180225957305/78da40503fe34114ad11ce507b2ff0eb/: meta.yaml
mlruns/525920180225957305/8254801c136e4709a2e171e473a613eb/: meta.yaml
mlruns/525920180225957305/8ec028f167b44aa2bb3f035b9f2b42d3/: meta.yaml
mlruns/525920180225957305/a2cd7594020e413584f8926d191daa40/: meta.yaml
mlruns/525920180225957305/a3f052a512cb4c789d1082f3da327db6/: meta.yaml
mlruns/525920180225957305/a48abbd56b7043c691384a16bc439222/: meta.yaml
mlruns/525920180225957305/c2e655c3432f480a813e54535b7b2bab/: meta.yaml
project_api/: main.py  modelos.py  pyproject.toml
project_api/route/: aplicativo.py
project_api/utils/: activate_mlflow.py  model.pth  scaler.pkl
(+82 files in other folders)
